--- a/00_canvas/clickdraw.html
+++ b/00_canvas/clickdraw.html
@@ -8,6 +8,7 @@
 </canvas>
 <button id="clear">Clear </button>
 <button id="toggle">Toggle</button>
+<p id="mode"></p>
 <script src="clickdraw.js"></script>
 </body>
 </html>
