--- a/04_canvas-dvd/index.html
+++ b/04_canvas-dvd/index.html
@@ -24,8 +24,8 @@
         </button>
     </div>  
     <div>
-        <h3>LuMing -- Jack Lu, Matthew Ming
-        </h3>
+        <h2>LuMing</h2>
+		<h3>Jack Lu, Matthew Ming</h3>
     </div>
     <canvas width="500" height="500" id="playground">
     </canvas>
