--- a/11_svg/index.html
+++ b/11_svg/index.html
@@ -22,11 +22,12 @@
 
     <svg id="vimage" height="500" width="500" style="border: 1px solid;">
     </svg>
-    
+    <button id="but_move">
+      move
+    </button>
     <button id="but_clear">
       clear
     </button>
-
     <script src="svg01.js">
     </script>
 
