--- a/11_svg/index.html
+++ b/11_svg/index.html
@@ -23,6 +23,9 @@
     <svg id="vimage" height="500" width="500" style="border: 1px solid;">
     </svg>
     <button id="but_move">
+      feature
+    </button>
+	 <button id="move">
       move
     </button>
     <button id="but_clear">
