oops forgot some stuff

--- a/15_svg/index.html
+++ b/15_svg/index.html
@@ -158,7 +158,9 @@ d3.csv("crashes.csv", function(error, data) {
 });
 
 </script>
-<p> This dataset observes the correlation </p>
+<p> This dataset observes the correlation between car crashes and how old a vehicle is, with additional data on how many occupants are involved.</p>
+<br>
+<a href="https://catalog.data.gov/dataset/motor-vehicle-crashes-vehicle-information-beginning-2009">Data</a>
 <br>
 <p>Hasif Ahmed and Matthew Ming</p>
 </center>
