--- a/21_js-mfr/index.html
+++ b/21_js-mfr/index.html
@@ -10,5 +10,7 @@ Percentage of schools with at least 50 students in grade 5
 <p id="percent"></p>
 Median of total enrollment in all schools
 <p id="median"></p>
+Number of schools with at least 20 percent of black or hispanic students
+<p id="number"></p>
 </body>
 </html>
